--- a/package.json
+++ b/package.json
@@ -5,17 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "react-scripts": "1.1.0",
     "react-redux": "^5.0.6",
     "react-sortable-hoc": "^0.6.8",
     "react-svg-spinner": "^0.2.0",
@@ -26,5 +16,15 @@
     "redux-saga": "^0.16.0",
     "styled-components": "^3.1.6",
     "yandex-map-react": "^1.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
